# Python-Weather-App

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api_selection.md  requirements_definition.md  screen_transition.md  weather_model_design.md
src/weather_app/: main.py
src/weather_app/database/: weather_repository.py
src/weather_app/gui/: app.py
src/weather_app/models/: weather.py
src/weather_app/services/: weather_service.py
src/weather_app/utils/: decorators.py  logger.py
tests/: test_weather.py  test_weather_repository.py  test_weather_service.py
