[project]
name = "python-weather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weather-app = "weather_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_app"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
